# power-bill-extractor

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
power_bill_extractor/: bill.py  main.py
src/power_bill_extractor/: bill.py  main.py
tests/: test_bill.py
