[tool.poetry]
name = "power-bill-extractor"
version = "0.2.2"
description = "An FPL power bill extractor"
license = "MIT"
authors = ["Jason Hutson <jhutsondev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/HutsonJason/power-bill-extractor"
packages = [{include = "power_bill_extractor"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
pdfminer-six = "^20221105"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
mkdocs-material = "^8.5.8"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"